--- a/themes/montessori-theme/sass/_involved.scss
+++ b/themes/montessori-theme/sass/_involved.scss
@@ -78,7 +78,7 @@
 }
 
 // Blockqoute
-blockquote {
+/*blockquote {
   font-size: 1.1em;
   border-left: 10px solid #D93B57;
   padding-left: 20px;
@@ -88,7 +88,7 @@ blockquote {
     display: flex;
     flex-flow: column;
   }
-}
+}*/
 
 #involved-titles-container {
   padding-bottom: 100px;
